# robo-ad

./: .gitignore  LICENSE  README.md
python/auto_driving/: auto_driving.py  main.py  recording.py
python/calib/: cam_calib.py  cam_calib_models.py
python/camera/: stereo_cam.py
python/config/: AUTO_DRIVING.yaml
python/cv_mine/: cv_utils.py
python/cv_mine/obj_det_tr/: detection.py  detection_dl_tflite.py  lane_finder.py  obj_det.py
python/data_loader/: base_loader.py  image_loader.py  pose_loader.py  tt_loader.py
python/man_ctrl/: flight_ctrl_client.py  man_ctrl.py  man_ctrl_pygame.py
python/mviz/: viz_auto_driving.py  viz_ml.py  viz_pose.py  viz_scene.py  viz_tools.py
python/my_geo/: observations.py  world_objects.py
python/my_logging/: my_logger.py
python/my_serial/: arduino.py
python/output/: image_recorder.py  tt_writer.py
python/pose/: pose_tools.py
python/rpi_utils/: rpi_analog.py  rpi_camera.py  rpi_com_uart.py  rpi_controller_server.py  rpi_pwm.py  rpi_ultrasonic.py
python/slam/vpr_dbow2/: CMakeLists.txt  create_voc_db.py  create_voc_db_adv.py  image_processing.cpp  img_search.py
python/tests/: sfm_test.py
python/tools/: mf_manip.py  mmisc.py  utils.py
python/wireless/: image_client.py  image_server.py  wl_client.py  wl_server.py  wl_socks.py
